# opi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md
crates/opi-agent/: Cargo.toml  README.md  README.zh.md
crates/opi-agent/src/: agent.rs  agent_loop.rs  compaction.rs  diagnostic.rs  diagnostic_sink.rs  event.rs  extension.rs  harness.rs  hooks.rs  lib.rs  loop_types.rs  message.rs  sdk.rs  session.rs  session_branch.rs  session_event.rs  state.rs  streaming_proxy.rs  tool.rs  trace.rs  transport.rs  validation.rs
crates/opi-agent/src/tool/: result.rs
crates/opi-agent/tests/: agent_loop_mock.rs  agent_loop_semantics.rs  agent_wrapper.rs  compaction.rs  diagnostics.rs  diagnostics_runtime.rs  extensions.rs  harness.rs  hooks_queues.rs  image_capability.rs  image_input_session.rs  image_tool_results.rs  retry_agent.rs  sdk_embedding.rs  session_branching.rs  session_contract.rs  session_facade.rs  session_storage.rs  streaming_proxy.rs  thinking_integration.rs  tool_event_redaction.rs  tool_validation.rs  trace_envelope.rs  transport.rs  truncated_propagation.rs
crates/opi-ai/: Cargo.toml  README.md  README.zh.md
crates/opi-ai/src/: anthropic.rs  azure_openai.rs  config.rs  gemini.rs  http.rs  lib.rs  message.rs  mistral.rs  model.rs  openai_chat.rs  openai_codex.rs  openai_responses.rs  openrouter.rs  provider.rs  provider_collection.rs  registry.rs  retry.rs  stream.rs  test_support.rs  vertex.rs
crates/opi-ai/src/bedrock/: credentials.rs  event_stream.rs  mod.rs  sigv4.rs
crates/opi-ai/tests/: anthropic_fixtures.rs  azure_openai_fixtures.rs  bedrock_fixtures.rs  connection_pooling.rs  custom_provider_registration.rs  gemini_fixtures.rs  gemini_lifecycle.rs  image_input.rs  image_provider_serialization.rs  mistral_fixtures.rs  mistral_lifecycle.rs  openai_chat_fixtures.rs  openai_chat_lifecycle.rs  openai_codex_fixtures.rs  openai_responses_fixtures.rs  openai_responses_lifecycle.rs  openrouter_fixtures.rs  openrouter_lifecycle.rs  output_content_image.rs  provider_collection.rs  provider_diagnostics.rs  provider_lifecycle.rs  provider_trait.rs  proxy_support.rs  registry.rs  retry_backoff.rs  stream_events.rs  test_support_tests.rs  tool_result_no_leak.rs  tool_result_wire.rs  usage_cost.rs  vertex_fixtures.rs
crates/opi-coding-agent/: Cargo.toml  README.md  README.zh.md
crates/opi-coding-agent/.opi/sessions/: 19e68227eb4.jsonl  19e68227eb7.jsonl
crates/opi-coding-agent/src/: adapter_extension.rs  adapter_host.rs  adapter_protocol.rs  cli.rs  config.rs  context_files.rs  diagnostic_bridge.rs  doctor.rs  harness.rs  image.rs  interactive.rs  lib.rs  main.rs  model_listing.rs  package_cli.rs  package_discovery.rs  package_resolver.rs  package_store.rs  picker.rs  policy.rs  pricing.rs  prompt.rs  prompt_fragment.rs  provider_factory.rs  resource.rs  rpc.rs  runner.rs  runtime_packages.rs  session_cli.rs  session_coordinator.rs  skill.rs  theme_discovery.rs
crates/opi-coding-agent/src/auth/: callback.rs  login.rs  mod.rs  pkce.rs  refresh.rs  storage.rs
crates/opi-coding-agent/src/tool/: bash.rs  edit.rs  find.rs  glob.rs  grep.rs  ls.rs  mod.rs  read.rs  write.rs
crates/opi-coding-agent/tests/: adapter_host.rs  adapter_host_mock.rs  adapter_protocol.rs  adapter_runtime.rs  agents_md_context.rs  auth_login.rs  auth_refresh.rs  azure_openai_provider_wiring.rs  bedrock_provider_wiring.rs  compaction_runtime.rs  config_loading.rs  config_precedence.rs  custom_provider_registration.rs  diagnostics_runtime.rs  diff_view_integration.rs  doctor_cli.rs  example_adapters.rs  extension_resources.rs  extensions.rs  find_tool.rs  harness_resource_integration.rs  image_input_cli.rs  image_input_json_mode.rs  image_slash_command.rs  image_tool_results_json.rs  interactive_hooks.rs  interactive_mock.rs  json_mode.rs  keybindings_config.rs  list_models.rs  list_models_json.rs  ls_tool.rs  mcp_adapter_example.rs  mock_e2e.rs  model_listing.rs  non_interactive.rs  non_interactive_policy.rs  observability_docs.rs  package_adapter_example.rs  package_cli.rs  (+35 more)
crates/opi-tui/: Cargo.toml  README.md  README.zh.md
crates/opi-tui/src/: branch_picker.rs  diff_view.rs  editor.rs  keybindings.rs  lib.rs  markdown.rs  message_list.rs  render.rs  select_list.rs  status_bar.rs  terminal_image.rs  theme.rs  tool_call.rs
crates/opi-tui/tests/: diff_view_snapshots.rs  image_view_snapshots.rs  keybindings.rs  markdown_snapshots.rs  select_list.rs  select_list_snapshots.rs  session_branching_snapshots.rs  terminal_image_rendering.rs  theme_snapshots.rs  tui_snapshots.rs
crates/opi-tui/tests/snapshots/: diff_view_snapshots__diff_view_additions_only_80x24.snap  diff_view_snapshots__diff_view_content_to_empty_80x24.snap  diff_view_snapshots__diff_view_empty_to_content_80x24.snap  diff_view_snapshots__diff_view_multi_hunk_80x24.snap  diff_view_snapshots__diff_view_no_changes_80x24.snap  diff_view_snapshots__diff_view_removals_only_80x24.snap  diff_view_snapshots__diff_view_simple_edit_120x40.snap  diff_view_snapshots__diff_view_simple_edit_80x24.snap  diff_view_snapshots__diff_view_truncation_120x40.snap  diff_view_snapshots__diff_view_truncation_80x24.snap  diff_view_snapshots__phase11_edit_diff_preview_metadata_snapshot.snap  image_view_snapshots__message_list_image_no_dims_80x10.snap  image_view_snapshots__message_list_mixed_text_and_image_80x24.snap  image_view_snapshots__message_list_with_fallback_image_120x40.snap  image_view_snapshots__message_list_with_fallback_image_80x24.snap  image_view_snapshots__message_list_with_kitty_image_80x24.snap  markdown_snapshots__code_block_multiline_120x20.snap  markdown_snapshots__code_block_no_language_80x10.snap  markdown_snapshots__code_block_rust_80x10.snap  markdown_snapshots__markdown_view_bold_italic_80x24.snap  markdown_snapshots__markdown_view_heading_80x24.snap  markdown_snapshots__markdown_view_mixed_120x40.snap  (+39 more)
crates/opi-web-ui/: Cargo.toml  README.md  README.zh.md
crates/opi-web-ui/src/: components.rs  event.rs  lib.rs  render.rs  state.rs
crates/opi-web-ui/tests/: web_ui.rs
(+128 files in other folders)
