[workspace]
members = [
    "crates/opi-ai",
    "crates/opi-agent",
    "crates/opi-coding-agent",
    "crates/opi-tui",
    "crates/opi-web-ui",
]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/OdradekAI/opi"
authors = ["OdradekAI"]

[workspace.dependencies]
opi-ai = { path = "crates/opi-ai", version = "0.5.2" }
opi-agent = { path = "crates/opi-agent", version = "0.5.2" }
opi-coding-agent = { path = "crates/opi-coding-agent", version = "0.5.2" }
opi-tui = { path = "crates/opi-tui", version = "0.5.2" }
opi-web-ui = { path = "crates/opi-web-ui", version = "0.5.2" }

# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "fs"] }
tokio-util = "0.7"
futures-core = "0.3"
futures-util = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# errors
thiserror = "2"
anyhow = "1"

# async traits
async-trait = "0.1"

# HTTP/SSE
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# config
toml = "0.8"

# TUI
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

# schema
schemars = "1"
jsonschema = "0.28"

# IDs/time
uuid = { version = "1", features = ["v7"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# file search
ignore = "0.4"
globset = "0.4"
regex = "1"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# markdown
pulldown-cmark = "0.13"

# testing
tempfile = "3"
insta = "1"
wiremock = "0.6"
proptest = "1"

# cryptography (SigV4 for Bedrock)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# env loading
dotenvy = "0.15"
