[package]
name = "opi-agent"
description = "General-purpose agent runtime with tool calling and transport abstraction"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
opi-ai = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
