[package]
name = "opi-ai"
description = "Unified multi-provider LLM API with streaming support"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
