[package]
name = "opi-coding-agent"
description = "Interactive coding agent CLI with file editing and shell execution"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
exclude = [".opi"]

[[bin]]
name = "opi"
path = "src/main.rs"

[dependencies]
opi-ai = { workspace = true }
opi-agent = { workspace = true }
opi-tui = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
toml = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
tokio-util = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
dotenvy = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
base64 = { workspace = true }

[[test]]
name = "adapter_host_mock"
path = "tests/adapter_host_mock.rs"
harness = false

[[test]]
name = "package_adapter_example"
path = "tests/package_adapter_example.rs"
harness = false
