[package]
name = "opi-web-ui"
publish = false
description = "Reusable web UI components for AI chat interfaces"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
opi-ai = { workspace = true }
opi-agent = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
